25-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Major refactoring and change of classes to use TS options and simplify flexform. Dropped TV renderer.
	* Renamed res/ to resources/
	* Move some classes toward MVC model

21-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Changed template file to add more markers, look like Google, use pagebrowse extension
	* Fixed very low page rank
	* Fixed problem with t3lib_div::getDomainStartPage() not finding correct domain

15-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Added template file and more markers

14-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed problem: URL log was never emptied
	* Indexing configuration records now can exist only on regular pages
	* Fix: htdb:/ records did not show full URL in search results in certain cases
	* Added feature to limit search on htdb:/ domains
	* Fixed problem: TYPO3SEARCH_xxx was not working
	* Fixed problem: indexing configuration is still not on pages
	* Fixed problem: page 1 is always displayed in the results
	* Removed site title from search results
	* Added better label for indexing records

09-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* CLI script supports indexing database tables
	* pi1 supports record indexing
	* Added XCLASS to CLI script
	* Added new fields for record indexing
	* Added slash to the database URL
	* Optimized postProc to use only one function
	* Updated manual
	* Post processing for content is now executed only if mnogosearch is running

08-10-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Fix: multiple copies of the same URL for indexing

10-09-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Added site limiting through piVars
	* Fixed bug: number of results was never displayed

10-03-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Lots of changes related to better search

07-03-2008	Dmitry Dulepov	<dmitry@typo3.org>

	* Removed one of two TS templates and merged its code into remaining
	* Removed RealURL lookup completely, now rely only on FE check