@@ -115,7 +115,9 @@
 		<!-- ###SEARCH_RESULTS_CONTENT### end -->
 	</div>
 
-	###PAGE_BROWSER###
+	<div class="tx-mnogosearch-page-browser">
+		###PAGE_BROWSER###
+	</div>
 </div>
 <!--/UdmComment-->
 <!-- ###SEARCH_RESULTS### end -->
